--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,94 @@
   align-items: center; /* Vertikal markazlash */
   width: 100%; /* Konteynerning kengligini belgilaydi */
 }
+.star-rating {
+  display: flex;
+  direction: row-reverse;
+  justify-content: center;
+}
+
+.star-rating input {
+  display: none;
+}
+
+.star-rating label {
+  font-size: 2rem;
+  color: #ccc;
+  cursor: pointer;
+}
+
+.star-rating label:before {
+  content: "★";
+}
+
+.star-rating input:checked ~ label {
+  color: orange;
+}
+
+.star-rating input:focus ~ label {
+  color: #ff9900;
+}
+/* Default size-option style */
+@media only screen and (max-width: 1000px) {
+  .div {
+    flex-direction: column;
+    gap: 50px;
+  }
+}
+@media only screen and (max-width: 975px) {
+  .div2 {
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 50px;
+  }
+  .la {
+    margin-top: 40px;
+  }
+}
+@media only screen and (max-width: 1250px) {
+  .div3 {
+    flex-direction: column;
+    gap: 50px;
+    align-items: center;
+  }
+}
+.div4 {
+  display: flex;
+  justify-content: space-between;
+}
+@media only screen and (max-width: 1250px) {
+  .div4 {
+    flex-direction: column;
+    gap: 50px;
+    align-items: center;
+  }
+}
+
+.div7 {
+  display: flex;
+  width: 650px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+@media only screen and (max-width: 800px) {
+  .div7 {
+    width: 400px;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  .div8 {
+    flex-direction: column;
+    gap: 20px;
+  }
+}
+@media only screen and (max-width: 590px) {
+  .li2 {
+    flex-direction: column;
+    display: flex;
+    gap: 20px;
+  }
+}
+.li3 {
+  align-items: center;
+}
